| Summary: | ASTERISK-22680: crash: playback control with operation omitted in POST | ||
| Reporter: | John Bigelow (jbigelow) | Labels: | |
| Date Opened: | 2013-10-10 15:57:48 | Date Closed: | 2013-10-16 16:21:01 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Bridges/bridge_native_rtp Bridges/bridge_softmix Resources/res_ari |
| Versions: | SVN 12.0.0-beta1 | Frequency of Occurrence | Frequent |
| Related Issues: | |||
| Environment: | Asterisk 12 branch r400832 | Attachments: | ( 0) backtrace.txt ( 1) full.txt |
| Description: | With a sound file playing to a native RTP bridge that contains two SIP channels I did a POST to _ari/playback/<playbackid>/control_ specifying the playbackid but without the operator key/value. I did do several POST's before this which will be seen in the log so start from the bottom up. :)
Command used (the shell variable $PLAYBACKID contained a valid playbackid): {code:lang=none} curl -s -F "playbackid=$PLAYBACKID" "http://localhost:8088/ari/playback/$PLAYBACKID/control?playbackid=$PLAYBACKID&api_key=admin:secret" {code} Attached backtrace and full log. Update - this also occurs when a sound file is being played to a channel instead of a bridge. | ||
| Comments: | |||